--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@mailerlite/mailerlite-nodejs": "^1.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-rate-limit": "^8.0.1",
+    "express-validator": "^7.2.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
